# 2D-Engine

./: CMakeLists.txt  CMakePresets.json  main.cpp
include/: engine.hpp  renderer.hpp
src/: engine.cpp  renderer.cpp
